--- a/links.html
+++ b/links.html
@@ -11,12 +11,12 @@
       <h2>Creating Links</h2>
       <nav role="navigation">
         <ul>
-          <li>Introduction to HTML</li>
-          <li>HTML syntax</li>
-          <li>Structuring pages</li>
-          <li>Creating links</li>
-          <li>HTML reference</li>
-          <li>Next steps</li>
+          <li><a href="index.html" title="HTML Introduction" >Introduction to HTML</a></li>
+          <li><a href="syntax.html" title="HTML Syntax explanation" >HTML syntax</a></li>
+          <li><a href="structure.html" title="HTML Structuring explanation">Structuring pages</a></li>
+          <li><a href="links.html" title="HTML link creation">Creating links</a></li>
+          <li><a href="reference.html" title="HTML references explanation">HTML reference</a></li>
+          <li><a href="next.html" title="Next steps">Next steps</a></li>
         </ul>
       </nav>
     </header>
@@ -168,7 +168,10 @@
       </article>
     </main>
     <footer role="contentinfo">
-      <p>CSUN 18111 Nordhoff St Northridge, CA 91330</p>
+      <p>
+        <a href="https://www.csun.edu" target="_blank" title="official CSUN page">CSUN</a> 18111 Nordhoff St 
+        Northridge, CA 91330 | <a href="https://x.com/csunorthridge" target="_blank" title="official CSUN twitter page">Follow us on Twitter</a>  
+      </p>
     </footer>
   </body>
 </html>
