--- a/syntax.html
+++ b/syntax.html
@@ -11,11 +11,11 @@
       <h2>HTML Syntax</h2>
       <nav role="navigation">
         <ul>
-          <li><a href="index.html" title="HTML Introduction" >Introduction to HTML</a></li>
-          <li><a href="syntax.html" title="HTML Syntax explanation" >HTML syntax</a></li>
-          <li><a href="structure.html" title="HTML Structuring explanation">Structuring pages</a></li>
-          <li><a href="links.html" title="HTML link creation">Creating links</a></li>
-          <li><a href="reference.html" title="HTML references explanation">HTML reference</a></li>
+          <li><a href="index.html" title="Introduction to HTML">Introduction to HTML</a></li>
+          <li><a href="syntax.html" title="HTML syntax" >HTML syntax</a></li>
+          <li><a href="structure.html" title="Structuring pages">Structuring pages</a></li>
+          <li><a href="links.html" title="Creating links">Creating links</a></li>
+          <li><a href="reference.html" title="HTML Reference">HTML reference</a></li>
           <li><a href="next.html" title="Next steps">Next steps</a></li>
         </ul>
       </nav>
